# bank

./: MISSION.md  QUICKSTART.md  README.md  config.example.json  pyproject.toml
bank/: __init__.py
bank/agents/: __init__.py  advanced_agents.py  base.py  random_agent.py  rule_based.py  test_agents.py  threshold_agents.py
bank/cli/: __init__.py  game_runner.py  human_player.py  main.py
bank/game/: __init__.py  engine.py  state.py
bank/replay/: __init__.py  recorder.py  viewer.py
bank/training/: __init__.py  dqn_agent.py  environment.py  train.py
bank/utils/: __init__.py  config.py
docs/: AGENT_API.md  ARCHITECTURE.md  BASE_GAME_RULES.md  CONVENTIONS.md  PHASE4_ARCHITECTURE.md  PROJECT_PLAN.md  REWARD_SCHEMES.md
examples/: README.md  analyze_leaderplus_ties.py  inspect_game.py  replay_demo.py  reward_demo.py  simple_agent.py  simulate_leaderplus_round.py  tournament.py  tournament_threshold_agents.py
tests/agents/: __init__.py  test_advanced_agents.py  test_agents.py
tests/game/: test_engine.py  test_engine_banking.py  test_engine_dice.py  test_engine_initialization.py  test_engine_polling.py  test_engine_rounds.py  test_state.py
tests/replay/: __init__.py  test_recorder.py
tests/utils/: test_config.py
